# andoria

./: .gitignore  index.html  params.json  pom.xml
brain/: pom.xml
brain/src/main/resources/: logback.groovy
client/: AndroidManifest.xml  build.gradle  pom.xml
client/android/: pom.xml
client/android/res/values/: strings.xml
client/core/: pom.xml
client/core/src/main/resources/: settings.properties
client/core/src/main/resources/fonts/: andoria-font.fnt
client/core/src/main/resources/ui/: andoria-ui-skin.json
client/pc/: pom.xml
client/pc/src/assemble/: distribution.xml
client/pc/src/main/resources/: andoria.cmd  logback.groovy
client/src/net/joesoft/: MainActivity.java
client/src/net/joesoft/andoria/: MainActivity.java
client/src/net/joesoft/andoria/gfx/: AndoriaRenderEngine.java  RenderEngine.java
client/src/net/joesoft/andoria/listener/: AndoriaTouchListener.java
client/win/: pom.xml
client/win/src/assemble/: distribution.xml
etc/: install-libgdx.cmd
server/: CMakeLists.txt  pom.xml
server/src/: CMakeLists.txt  Main.cpp  andoriaserver.cpp  andoriaserver.hpp  configuration.cpp  configuration.hpp  global.hpp  main.cpp  server.cpp  server.hpp
server/src/net/: com.cpp  com.hpp  comfactory.cpp  comfactory.hpp  coms.cpp  coms.hpp  server.cpp  server.hpp  tcpconnection.cpp  tcpconnection.hpp
server/src/server/: server.hpp
src/test/resources/: logback-test.groovy  settings.properties
src/test/resources/models/: mediaeval-house.mtl
src/test/resources/ui/: ui-skin.json
src/test/resources/ui/gimp/: settings-menu-background.xcf
(+128 files in other folders)
